# SimpleDRMRenderer

./: .gitignore  CMakeLists.txt  README.md  example.c
Helpers/: GL_helpers.c  GL_helpers.h  Input_helpers.c  Input_helpers.h  Renderer_helpers.c  Renderer_helpers.h
Shaders/: triangle.frag  triangle.vert
